Wrote the tokenizer for the commands. Also changed the main function to use it and the document and token structures to accommodate it/work with it well.

--- a/text.tex
+++ b/text.tex
@@ -1,9 +1,9 @@
-%size<7,9>
-%fontsize<12>
+%size<7,9>%
+%fontsize<12>%
 
 #begin#
 This is a test document for the Note markup language. It contains examples of how everything works for development and testing purposes.
-!Here's a comment. This shouldn't be visible in the LaTeX output.Isn't this exciting?!!
+!Here's a comment. This shouldn't be visible in the LaTeX output.Isn't this exciting?\!!
 
 First, some symbols:
 #fi#
@@ -46,9 +46,9 @@ And, finally, some text testing
 	#bf#
 	Bolded this text.
 	#end_bf#
-	Anyway, here is some more text for you to read. But, suddenly! #break# It breaks! And, before you know it, 
+	Anyway, here is some more text for you to read. But, suddenly\! #break# It breaks\! And, before you know it, 
 	#Break#
-	it's broken to the next page! Fancy, eh?
+	it's broken to the next page\! Fancy, eh?
 	Now, the last thing we should do is look at some code.
 	#exact#
 	Knockknock(){
