Minor changes to the parser, generator, and rules to fix bugs. Also deleted useless stuff.

--- a/text.tex
+++ b/text.tex
@@ -6,46 +6,46 @@
 
 \begin{document}
 This is a test document for the Note markup language. It contains examples of how everything works for development and testing purposes.
-%Here's a comment. This shouldn't be visible in the LaTeX output.Isn't this exciting?\!
+%Here's a comment. This shouldn't be visible in the LaTeX output.Isn't this exciting?!
 
 First, some symbols:
 \begin{adjustwidth}{4em}{0em}
-    $\leftarrow$ - A left arrow \newline
-    $\rightarrow$ - A right arrow \newline
-    $\leftrightarrow$ - A left/right arrow \newline
-    $\cup$ - Logical OR \newline
-    $\cap$ - Logical AND \newline
-    $\oplus$ - Logical XOR \newline
-    $\mathbf{T}$ - Logical True \newline
-    $\mathbf{F}$ - Logical False \newline
-    $\forall$ - Math For All \newline
-    $\exists$ - Math There Exists \newline
+    $\leftarrow$ - A left arrow \\
+    $\rightarrow$ - A right arrow \\
+    $\leftrightarrow$ - A left/right arrow \\
+    $\cup$ - Logical OR \\
+    $\cap$ - Logical AND \\
+    $\oplus$ - Logical XOR \\
+    $\mathbf{T}$ - Logical True \\
+    $\mathbf{F}$ - Logical False \\
+    $\forall$ - Math For All \\
+    $\exists$ - Math There Exists \\
 \end{adjustwidth}
 
 Now, some mathy type stuff:
 \begin{adjustwidth}{4em}{0em}
-    Here's a formula: $ A+B=C $ \newline
+    Here's a formula: $ A+B=C $ \\
     And here's some multi-line math:
     $
-        alpha_[prime] = (x+1)(x^2+2)y^[32]
+        alpha_{prime} = (x+1)(x^2+2)y^{32}
     $
-    And a fraction: $\frac{x+1}{x-1+y}$  \newline
+    And a fraction: $\frac{x+1}{x-1+y}$  \\
 \end{adjustwidth}
 
 And, finally, some text testing
 \begin{adjustwidth}{4em}{0em}
-    Subscripting - Hi$_{there}$ \newline
-    Superscripting - Like$^{this?}$ \newline
+    Subscripting - Hi$_{there}$ \\
+    Superscripting - Like$^{this?}$ \\
     \begin{center}
-    This is some centered text. \newline
+    This is some centered text. \\
     \end{center}
-    \hspace{4em} Even more indent for your digestion. \newline
-    Underlined \underline{this text}.\newline
-    Italicized \textit{this text}.\newline
-    Bolded \textbf{this text}.\newline
-    Anyway, here is some more text for you to read. But, suddenly!\newline It breaks!And, before you know it, 
+    \hspace{4em} Even more indent for your digestion. \\
+    Underlined \underline{this text}.\\
+    Italicized \textit{this text}.\\
+    Bolded \textbf{this text}.\\
+    Anyway, here is some more text for you to read. But, suddenly! \\ It breaks! And, before you know it, 
     \clearpage
-    it's broken to the next page!Fancy, eh?
+    It's broken to the next page!Fancy,  eh?
     Now, the last thing we should do is look at some code.
     \begin{verbatim}
     Knockknock(){
